// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`application contract names preserve every generated byte: user 1`] = `
{
  "README.md": "bbb4eba4329dbd042edb2aa11b56162208c9818b67beb5308be54c311ee546b4",
  "adapters/rabbitmq.transport.ts": "12a0731a4b2e5bff1958deb2e4ba9d6d172ea64501964051dd24eacb626155b2",
  "adapters/status.resolver.ts": "5eb1eb06561bdd03ee349b492b06b04d2bc21f04aaddde6d1e03572e6ad995ca",
  "application.json": "3a66f70bf9e8fd2f422e572748f34d4c13af9b6e90ec8c47d8f9ee8f75ec8041",
  "application/message-handler.ts": "ed5908dfca379db914c85b288b15d7443c08f49b8742efc9445ddb0690c4933a",
  "bunfig.toml": "90327cca703bceb08b4d95a7ee887f3f5d8e30c84b6dfa2d25516977029557fd",
  "composition.json": "61561fc2c4842135206864c3132d0d08238c35d76747d3bfd78479affb44374a",
  "composition/app.module.ts": "e83817f30ed1ce047e7a770f23424f169d25ec906fdd7da2946580724e4a1e6f",
  "configs/environment.ts": "1aa313b363cc6f6025a105feb685c47a540f51307eb641ca8fc033219399e810",
  "configs/tokens.ts": "e3715c9c202f2659172801b724a36a7b1b645484e7404bca6d31f08655d40446",
  "database/database.module.ts": "b6f37952c6dc809fc03622231f45f8b14210ebfa5009a1ce5e53de6daea2f2aa",
  "database/migrations/README.md": "c5734390ff8713fca3e93fd24a2803aac8e21f139a25918c3c5c033052ae2afd",
  "distribution.json": "98b686c912a62954ac235d9ba84f4e9b815a3ddee72b63f67e0a51e357f7ebc3",
  "main.ts": "98a97972dbd6be98d60c067fb89364617a40c2b12676b46cb72d6d47770ec880",
  "package.json": "75cb815e23b9caa1a1b1396f3447826e3ba4553b7367d1c5b7a0d136e525a902",
  "project.json": "24c0257e4442eeb0b5fe876ad2667c9e3492d608a861cfeca903b4882e576e3c",
  "tests/component/README.md": "e059034f2fabbe54db68c608014c2d642305e0147da3143c348ee518e6b26715",
  "tests/unit/README.md": "f02be2eec65644bbb77a502d688dfe06df1e394abda6732751e01bb92efbe788",
  "tsconfig.json": "752e9f91ac9d46f94379e32ec9b7a12f2065846cd430075199f8f366d376c386",
}
`;

exports[`application contract names preserve every generated byte: wallet 1`] = `
{
  "README.md": "f3f16eb63a6d0267dee5434cdb61eee090482f1ceff8aae9fa835112f3155fac",
  "adapters/rabbitmq.transport.ts": "57117d134ecc08910f6d2234f1b257c4c634f82bee6acee23dd7ab84fa8ebe74",
  "adapters/status.resolver.ts": "5eb1eb06561bdd03ee349b492b06b04d2bc21f04aaddde6d1e03572e6ad995ca",
  "application.json": "ffb94421fe791a266e53b9fdd768f361f3f7242a0e531de3a70d50fb0cef84b6",
  "application/message-handler.ts": "ed5908dfca379db914c85b288b15d7443c08f49b8742efc9445ddb0690c4933a",
  "bunfig.toml": "90327cca703bceb08b4d95a7ee887f3f5d8e30c84b6dfa2d25516977029557fd",
  "composition.json": "61561fc2c4842135206864c3132d0d08238c35d76747d3bfd78479affb44374a",
  "composition/app.module.ts": "e83817f30ed1ce047e7a770f23424f169d25ec906fdd7da2946580724e4a1e6f",
  "configs/environment.ts": "1f41c6f17c06a6b83db762fe0bd49d127e32c3e11b36848ad72d99cc727b9ca8",
  "configs/tokens.ts": "ce1c3c0edeef9b05db9cd9383fc4feb54a01bcb9c12aba14c79d66fdc15992a3",
  "database/database.module.ts": "b6f37952c6dc809fc03622231f45f8b14210ebfa5009a1ce5e53de6daea2f2aa",
  "database/migrations/README.md": "625bc9f7bcbf200f1181ec7261c7b7d8b246cda6561fa18e584ee47c035dd2ef",
  "distribution.json": "98b686c912a62954ac235d9ba84f4e9b815a3ddee72b63f67e0a51e357f7ebc3",
  "main.ts": "98a97972dbd6be98d60c067fb89364617a40c2b12676b46cb72d6d47770ec880",
  "package.json": "bd3fb1630f870606ba96e4a2ffa7fe7b33cb7846ec5cf9d87425e55809899662",
  "project.json": "0cc1941674a210cec7b2cc6831dc6e0f975330fae42167e760dd81666595f63a",
  "tests/component/README.md": "e059034f2fabbe54db68c608014c2d642305e0147da3143c348ee518e6b26715",
  "tests/unit/README.md": "f02be2eec65644bbb77a502d688dfe06df1e394abda6732751e01bb92efbe788",
  "tsconfig.json": "752e9f91ac9d46f94379e32ec9b7a12f2065846cd430075199f8f366d376c386",
}
`;

exports[`application contract names preserve every generated byte: order-history 1`] = `
{
  "README.md": "b034d2c76188d07c626571b9023902502b05ce99fe7406b1c2ba69dd8e55f973",
  "adapters/rabbitmq.transport.ts": "726007a2d62c91527a1bf152f5411995fa4ce8d1aa03b9bcf8346b0d81eef218",
  "adapters/status.resolver.ts": "5eb1eb06561bdd03ee349b492b06b04d2bc21f04aaddde6d1e03572e6ad995ca",
  "application.json": "36d290adb76afdeea68ed2cae1b669c0367c0ef6b496ea77739379ff2850c7ce",
  "application/message-handler.ts": "ed5908dfca379db914c85b288b15d7443c08f49b8742efc9445ddb0690c4933a",
  "bunfig.toml": "90327cca703bceb08b4d95a7ee887f3f5d8e30c84b6dfa2d25516977029557fd",
  "composition.json": "61561fc2c4842135206864c3132d0d08238c35d76747d3bfd78479affb44374a",
  "composition/app.module.ts": "e83817f30ed1ce047e7a770f23424f169d25ec906fdd7da2946580724e4a1e6f",
  "configs/environment.ts": "6b2c755d405ae2084d2dd8f0323418b9701c6e798159ef6601cd9e19c9391364",
  "configs/tokens.ts": "a61f3aa1c072f325e1c23f42f2a7db6d446521fbd81933583ea787ecb1e24415",
  "database/database.module.ts": "b6f37952c6dc809fc03622231f45f8b14210ebfa5009a1ce5e53de6daea2f2aa",
  "database/migrations/README.md": "d48fe60f33a11b010e00b946750a833cf6e21b62a0fbc51e1a01f79a6c3cd22f",
  "distribution.json": "98b686c912a62954ac235d9ba84f4e9b815a3ddee72b63f67e0a51e357f7ebc3",
  "main.ts": "98a97972dbd6be98d60c067fb89364617a40c2b12676b46cb72d6d47770ec880",
  "package.json": "9880f0cdbf459e5df555d3271b2ec222d58db95f78595bd5b3e2105141b28d0b",
  "project.json": "4765648b457f7bf0ac94abd58ddd332bc86248eff485b6ccbc61fccfbd57844b",
  "tests/component/README.md": "e059034f2fabbe54db68c608014c2d642305e0147da3143c348ee518e6b26715",
  "tests/unit/README.md": "f02be2eec65644bbb77a502d688dfe06df1e394abda6732751e01bb92efbe788",
  "tsconfig.json": "752e9f91ac9d46f94379e32ec9b7a12f2065846cd430075199f8f366d376c386",
}
`;
